--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "abandoned": "bin/abandoned.js"
   },
   "dependencies": {
-    "async": "^2.0.0-rc.3",
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "pretty-date": "^0.2.0",
-    "request": "^2.71.0"
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   },
   "devDependencies": {}
 }
