--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "bin": {
     "abandoned": "bin/abandoned.js"
   },
+  "scripts": {
+    "start": "node bin/abandoned.js"
+  },
   "dependencies": {
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
