--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   "dependencies": {
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
-    "pretty-date": "^0.2.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "pretty-date": "^0.2.0"
   },
   "devDependencies": {}
 }
