Whitelist files to include in built package

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "bin": {
     "abandoned": "bin/ditched.js"
   },
+  "files": [
+    "bin"
+  ],
   "scripts": {
     "start": "node bin/ditched.js",
     "format": "prettier . --write",
