--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
   },
   "dependencies": {
     "cli-table": "^0.3.1",
-    "colors": "^1.1.2"
+    "colors": "^1.1.2",
+    "yargs": "^17.3.0"
   },
   "devDependencies": {
     "@types/cli-table": "^0.3.0",
     "@types/node": "^12.20.37",
+    "@types/yargs": "^17.0.7",
     "prettier": "^2.5.0",
     "typescript": "^4.5.4"
   }
