--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "cli-table": "^0.3.1",
-    "colors": "^1.1.2",
     "yargs": "^17.3.0"
   },
   "devDependencies": {
