--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ditched",
   "description": "List dependencies that haven't been updated in a long time.",
   "version": "2.3.0",
+  "type": "module",
   "engines": {
-    "node": ">=12",
-    "npm": ">=8"
+    "node": ">=18",
+    "npm": ">=10"
   },
   "keywords": [
     "cli",
@@ -34,15 +35,15 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
-    "cli-table": "^0.3.1",
-    "yargs": "^17.3.0"
+    "chalk": "^5.4.1",
+    "cli-table": "^0.3.11",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@types/cli-table": "^0.3.0",
-    "@types/node": "^12.20.37",
-    "@types/yargs": "^17.0.7",
-    "prettier": "^3.0.2",
-    "typescript": "^5.2.2"
+    "@types/cli-table": "^0.3.4",
+    "@types/node": "^12.20.55",
+    "@types/yargs": "^17.0.33",
+    "prettier": "^3.5.1",
+    "typescript": "^5.7.3"
   }
 }
